ECE/cs225/grade-reports/exam-1/tests.txt
CD to .. 
/home/mattox/repos/fa16-exam1-grading/submissions/jhutter2
##################################################
##                                              ##
##     Grading question exam-1-code-ellipse     ##
##                                              ##
##################################################
Grader dir is /home/mattox/repos/fa16-exam1-grading/code-grading/scripts
qid is exam-1-code-ellipse
shape is ellipse
test_dir is /home/mattox/repos/fa16-exam1-grading/code-grading/scripts/tests/ellipse
:: Compiling...
g++ -std=c++0x -c -g -O0 -Wall -Wextra -Wno-unused-function   -c -o ellipse.o ellipse.cpp
ellipse.cpp:12:48: error: declaration of ‘Ellipse::Ellipse(int, int)’ outside of class is not definition [-fpermissive]
 Ellipse::Ellipse(int major_radi, int minor_radi);{
                                                ^
ellipse.cpp:12:50: error: expected unqualified-id before ‘{’ token
 Ellipse::Ellipse(int major_radi, int minor_radi);{
                                                  ^
<builtin>: recipe for target 'ellipse.o' failed
make: *** [ellipse.o] Error 1
Could not compile ellipse.o.

Grade for question exam-1-code-ellipse: 0/100


~ ~ ~

Grade: 0

Details:
test,grade
ellipse_compiled,0
